// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SetupCardReaderPage renders SetupCardReaderPage with usePollWorkerLanguage set to false 1`] = `
<div
  class="sc-dkPtyc ftEvXz"
>
  <main
    class="sc-bdvvaa jnfvZB"
  >
    <div
      class="sc-gsDJrp fCJDVu"
    >
      <h1>
        Card Reader Not Detected
      </h1>
      <p>
        Please connect the card reader to continue.
      </p>
    </div>
  </main>
</div>
`;

exports[`renders SetupCardReaderPage triggers useEffect property 1`] = `
<div
  class="sc-dkPtyc ftEvXz"
>
  <main
    class="sc-bdvvaa jnfvZB"
  >
    <div
      class="sc-gsDJrp fCJDVu"
    >
      <h1>
        Card Reader Not Detected
      </h1>
      <p>
        Please ask a poll worker to connect card reader.
      </p>
    </div>
  </main>
</div>
`;

exports[`renders SetupCardReaderPage with no useEffect trigger as expected 1`] = `
<div
  class="sc-dkPtyc ftEvXz"
>
  <main
    class="sc-bdvvaa jnfvZB"
  >
    <div
      class="sc-gsDJrp fCJDVu"
    >
      <h1>
        Card Reader Not Detected
      </h1>
      <p>
        Please ask a poll worker to connect card reader.
      </p>
    </div>
  </main>
</div>
`;
